--- a/src/html/views/personal_orders2.html
+++ b/src/html/views/personal_orders2.html
@@ -38,13 +38,13 @@
                         <div class="asidemenu__items">
                           <div class="asidemenu__level_1">
                             <ul class="asidemenuLevelOne">
-                              <li class='asidemenuLevelOne__item active'>
+                              <li class='asidemenuLevelOne__item '>
                                 <a href="" class='asidemenuLevelOne__link'>
                                   <span class='asidemenu__name'>Профиль</span>
                                 </a>
 
                               </li>
-                              <li class='asidemenuLevelOne__item '>
+                              <li class='asidemenuLevelOne__item active'>
                                 <a href="" class='asidemenuLevelOne__link'>
                                   <span class='asidemenu__name'>Заказы</span>
                                 </a>
@@ -85,10 +85,128 @@
               <div class=" asidewrapper__main">
                 <div class="personalcontent">
                   <div class="personalcontent__title">Ваши заказы</div><!-- /.personalcontent__title -->
-                  <div class="personalcontent__text">Текущие заказы не найдены</div><!-- /.personalcontent__text -->
-                  <div class="personalcontent__button">
-                    <a href="" class="btn_main btn_main2">Перейти в каталог</a><!-- /.btn_main btn_main2 -->
-                  </div><!-- /.personalcontent__button -->
+                  <div class="personalcontent__orderlist">
+                    <div class="orderlist">
+                      <div class="orderlist__table">
+                        <table>
+                          <thead>
+                            <tr>
+                              <th><span>№ заказа</span></th>
+                              <th><span>Дата</span></th>
+                              <th><span>Состав заказа</span></th>
+                              <th><span>Сумма</span></th>
+                              <th><span>Статус</span></th>
+                              <th><span>Доставка</span></th>
+                              <th><span>Оплата</span></th>
+                              <th><span>Начислено баллов</span></th>
+                              <th><span>Списано баллов</span></th>
+                            </tr>
+                          </thead>
+                          <tbody>
+                            <tr>
+                              <td><span>11420</span></td>
+                              <td><span>01.01.2023</span></td>
+                              <td class='orderlist__product'>
+                                <div class='cartproductlist'>
+                                  <div class='cartproductlist__item'>
+                                    <div class="cartproduct">
+                                      <div class="cartproduct__image">
+                                        
+                                        <div class="cartproduct__img">
+                                          <img src="img/card2.png" alt="" width='40' height='40'>
+                                        </div><!-- /.cartproduct__img -->
+                                      </div><!-- /.cartproduct__image -->
+                                      <div class="cartproduct__info">
+                                        <div class="cartproduct__title"><a href="">Стейки трески</a></div>
+                                        <!-- /.cartproduct__title -->
+                                        <div class="cartproduct__params">
+                                          <div class="cartproduct__param">299 ₽ / уп </div>
+                                        </div><!-- /.cartproduct__params -->
+                                      </div><!-- /.cartproduct__info -->
+                                    </div><!-- /.cartproduct -->
+                                  </div>
+                                  <div class='cartproductlist__item'>
+                                    <div class="cartproduct">
+                                      <div class="cartproduct__image">
+                                        
+                                        <div class="cartproduct__img">
+                                          <img src="img/card2.png" alt="" width='40' height='40'>
+                                        </div><!-- /.cartproduct__img -->
+                                      </div><!-- /.cartproduct__image -->
+                                      <div class="cartproduct__info">
+                                        <div class="cartproduct__title"><a href="">Стейки трески</a></div>
+                                        <!-- /.cartproduct__title -->
+                                        <div class="cartproduct__params">
+                                          <div class="cartproduct__param">299 ₽ / уп </div>
+                                        </div><!-- /.cartproduct__params -->
+                                      </div><!-- /.cartproduct__info -->
+                                    </div><!-- /.cartproduct -->
+                                  </div>
+                                  <div class='cartproductlist__item'>
+                                    <div class="cartproduct">
+                                      <div class="cartproduct__image">
+                                        
+                                        <div class="cartproduct__img">
+                                          <img src="img/card2.png" alt="" width='40' height='40'>
+                                        </div><!-- /.cartproduct__img -->
+                                      </div><!-- /.cartproduct__image -->
+                                      <div class="cartproduct__info">
+                                        <div class="cartproduct__title"><a href="">Стейки трески</a></div>
+                                        <!-- /.cartproduct__title -->
+                                        <div class="cartproduct__params">
+                                          <div class="cartproduct__param">299 ₽ / уп </div>
+                                        </div><!-- /.cartproduct__params -->
+                                      </div><!-- /.cartproduct__info -->
+                                    </div><!-- /.cartproduct -->
+                                  </div>
+                                </div>
+                              </td>
+                              <td class='orderlist__price'><span>2 746 ₽</span></td>
+                              <td><span>Принят</span></td>
+                              <td><span>Курьером по Московской области
+                                (от 5 до 20 км)</span></td>
+                              <td><span>Наличные курьеру</span></td>
+                              <td class='orderlist__price'><span>0 ₽</span></td>
+                              <td class='orderlist__price'><span>0 ₽</span></td>
+                            </tr>
+                            <tr>
+                              <td><span>11420</span></td>
+                              <td><span>01.01.2023</span></td>
+                              <td class='orderlist__product'>
+                                <div class='cartproductlist'>
+                                  <div class='cartproductlist__item'>
+                                    <div class="cartproduct">
+                                      <div class="cartproduct__image">
+                                        
+                                        <div class="cartproduct__img">
+                                          <img src="img/card2.png" alt="" width='40' height='40'>
+                                        </div><!-- /.cartproduct__img -->
+                                      </div><!-- /.cartproduct__image -->
+                                      <div class="cartproduct__info">
+                                        <div class="cartproduct__title"><a href="">Стейки трески</a></div>
+                                        <!-- /.cartproduct__title -->
+                                        <div class="cartproduct__params">
+                                          <div class="cartproduct__param">299 ₽ / уп </div>
+                                        </div><!-- /.cartproduct__params -->
+                                      </div><!-- /.cartproduct__info -->
+                                    </div><!-- /.cartproduct -->
+                                  </div>
+                                
+                                </div>
+                              </td>
+                              <td class='orderlist__price'><span>2 746 ₽</span></td>
+                              <td><span>Принят</span></td>
+                              <td><span>Курьером по Московской области
+                                (от 5 до 20 км)</span></td>
+                              <td><span>Наличные курьеру</span></td>
+                              <td class='orderlist__price'><span>0 ₽</span></td>
+                              <td class='orderlist__price'><span>0 ₽</span></td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      </div><!-- /.orderlist__table -->
+                    </div><!-- /.orderlist -->
+                  </div><!-- /.personalcontent__orderlist -->
                 </div><!-- /.personalcontent -->
               </div>
               <!-- /.catalogpage__main -->
