--- a/src/html/views/personal_sub2.html
+++ b/src/html/views/personal_sub2.html
@@ -38,13 +38,13 @@
                         <div class="asidemenu__items">
                           <div class="asidemenu__level_1">
                             <ul class="asidemenuLevelOne">
-                              <li class='asidemenuLevelOne__item '>
+                              <li class='asidemenuLevelOne__item active'>
                                 <a href="" class='asidemenuLevelOne__link'>
                                   <span class='asidemenu__name'>Профиль</span>
                                 </a>
 
                               </li>
-                              <li class='asidemenuLevelOne__item active'>
+                              <li class='asidemenuLevelOne__item '>
                                 <a href="" class='asidemenuLevelOne__link'>
                                   <span class='asidemenu__name'>Заказы</span>
                                 </a>
@@ -84,11 +84,20 @@
               <!-- /.catalogpage__aside -->
               <div class=" asidewrapper__main">
                 <div class="personalcontent">
-                  <div class="personalcontent__title">Ваши заказы</div><!-- /.personalcontent__title -->
-                  <div class="personalcontent__text">Текущие заказы не найдены</div><!-- /.personalcontent__text -->
-                  <div class="personalcontent__button">
-                    <a href="" class="btn_main btn_main2">Перейти в каталог</a><!-- /.btn_main btn_main2 -->
-                  </div><!-- /.personalcontent__button -->
+                  <div class="personalcontent__title">Ваша подписка</div><!-- /.personalcontent__title -->
+                  <div class="subscribeblock__form">
+                    <form action="">
+                      <div class="subscribeblock__row">
+                        <div class="subscribeblock__input">
+                          <input type="email" placeholder="Код подтверждения из e-mail">
+                        </div><!-- /.subscribeblock__input -->
+                        <div class="subscribeblock__button">
+                          <button type="submit" class="btn_main">Подтвердить</button>
+                        </div><!-- /.subscribeblock__button -->
+                      </div><!-- /.subscribeblock__row -->
+                     
+                    </form>
+                  </div>
                 </div><!-- /.personalcontent -->
               </div>
               <!-- /.catalogpage__main -->
