--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5008,7 +5008,7 @@ margin-bottom: 31px;
   padding: 0 10px 20px 10px;
 }
 .asidewrapper__main {
-  width: 100%;
+
 }
 .formblock__input_col3 {
   width: 33.3%;
@@ -5048,8 +5048,158 @@ line-height: 31px;
 color: #3A3A3A;
 margin-bottom: 34px;
 }
-@include large-screen {
+.orderlist__table {
+  width: 100%;
+    overflow-x: auto;
+}
+.orderlist {
+  margin: 0 -30px;
+  width: calc(100% + 60px);
 
+
+  table {
+    thead {
+     
+      th {
+        background: #FFFFFF;
+
+font-style: normal;
+font-weight: 600;
+font-size: 12px;
+line-height: 15px;
+/* identical to box height */
+
+text-align: center;
+padding: 5px 14px;
+min-height: 40px;
+color: #3A3A3A;
+
+&:first-child {
+  border-radius: 10px 0px 0px 10px;
+}
+&:last-child {
+border-radius:  0px 10px 10px 0px ;
+}
+      }
+    }
+
+    tbody {
+      td {
+        font-style: normal;
+font-weight: 400;
+font-size: 10px;
+line-height: 12px;
+text-align: center;
+padding: 17px 6px 0 6px;
+color: #3A3A3A;
+vertical-align: top;
+min-width: 85px;
+      }
+    }
+.cartproduct__title {
+  margin-bottom: 6px;
+}
+    .cartproduct__image {
+      min-width: 40px;
+      max-width: 40px;
+      height: 40px;
+      border-radius: 10px;
+    }
+    .cartproduct__info {
+      margin-left: 10px;
+          text-align: left;
+    }
+    .cartproduct__title a {
+      margin-bottom: 6px;
+      font-style: normal;
+font-weight: 400;
+font-size: 10px;
+line-height: 12px;
+
+color: #3A3A3A;
+    }
+   .cartproduct__param {
+font-style: normal;
+font-weight: 600;
+font-size: 12px;
+line-height: 15px;
+/* identical to box height */
+opacity: 1;
+
+color: #3A3A3A;
+    }
+    .orderlist__product {
+      min-width: 190px;
+    }
+    .cartproduct {
+      max-width: 156px;
+      margin: auto;
+    }
+  }
+  .orderlist__price {
+    font-style: normal;
+font-weight: 600;
+font-size: 12px;
+line-height: 15px;
+/* identical to box height */
+
+text-align: center;
+
+color: #3A3A3A;
+  }
+  .cartproductlist__item {
+    margin-bottom: 20px;
+  }
+}
+
+.subscribeblock__text {
+  font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 17px;
+/* identical to box height */
+
+
+color: #3A3A3A;
+}
+
+.personalcontent__text {
+  max-width: 744px;
+
+  p {
+    color: #3a3a3a;
+    font-size: 26px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 31px;
+    margin-bottom: 34px;
+  }
+}
+
+p { 
+  a {
+    color: rgba(8, 16, 91, 1);
+    font-weight: bold;
+    text-decoration: underline;
+  }
+}
+
+@include large-screen {
+  .asidewrapper_asideblock {
+    width: 240px;
+    .grayblock {
+      padding: 26px 15px;
+    }
+  }
+  .asidewrapper__aside .asidewrapper__menu li a {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .orderlist table tbody td {
+    padding: 10px 2px 0 2px;
+    min-width: unset;
+  }
+  .orderlist table .orderlist__product {min-width: 140px;}
   
   .cartsummary {
     padding: 30px;
@@ -6648,6 +6798,16 @@ margin-bottom: 34px;
   width: 100%;
 }
 .personalcontent__text {
+  font-size: 20px;
+  line-height: 1.2;
+}
+.orderlist {
+  margin: 0;
+  width: 100%;
+}.asidewrapper__main {
+  width: 100%;
+}
+.personalcontent__text p {
   font-size: 20px;
   line-height: 1.2;
 }
