--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -84,6 +84,7 @@
 @import "./partials/animations.scss";
 @import "./partials/classes.scss";
 @import "./modal.scss";
+@import "./detail.scss";
 @import "./responsive.scss";
 body {
   min-width: 320px;
