--- a/src/html/views/blog.html
+++ b/src/html/views/blog.html
@@ -78,7 +78,7 @@
                                 <div class="blogcard__info flex items-center">
                                   <div class="blogcard__icon"><img src="img/playvideo.svg" alt=""></div>
                                   <div class="blogcard__title">
-                                    <div class="blogcard__name">
+                                    <div class="blogcard__date">05.07.2022</div><div class="blogcard__name">
                                       Осьминоги с запеченной свеклой и томатами черри
                                     </div>
                                     <div class="blogcard__duration">4:04</div>
@@ -107,7 +107,7 @@
                                 <div class="blogcard__info flex items-center">
                                   <div class="blogcard__icon"><img src="img/playvideo.svg" alt=""></div>
                                   <div class="blogcard__title">
-                                    <div class="blogcard__name">
+                                    <div class="blogcard__date">05.07.2022</div><div class="blogcard__name">
                                       Осьминоги с запеченной свеклой и томатами черри
                                     </div>
                                     <div class="blogcard__duration">4:04</div>
@@ -134,7 +134,7 @@
                                 <div class="blogcard__info flex items-center">
                                   <div class="blogcard__icon"><img src="img/playvideo.svg" alt=""></div>
                                   <div class="blogcard__title">
-                                    <div class="blogcard__name">
+                                    <div class="blogcard__date">05.07.2022</div><div class="blogcard__name">
                                       Осьминоги с запеченной свеклой и томатами черри
                                     </div>
                                     <div class="blogcard__duration">4:04</div>
@@ -164,7 +164,7 @@
                               </div>
                               <div class="blogcard__info flex items-center">
                                 <div class="blogcard__title">
-                                  <div class="blogcard__name">
+                                  <div class="blogcard__date">05.07.2022</div><div class="blogcard__name">
                                     Чек-лист по покупке замороженной рыбы
                                   </div>
                                 </div><!-- /.blogcard__title -->
@@ -188,7 +188,7 @@
                               </div>
                               <div class="blogcard__info flex items-center">
                                 <div class="blogcard__title">
-                                  <div class="blogcard__name">
+                                  <div class="blogcard__date">05.07.2022</div><div class="blogcard__name">
                                     Польза морской рыбы
                                   </div>
                                 </div><!-- /.blogcard__title -->
@@ -212,7 +212,7 @@
                               </div>
                               <div class="blogcard__info flex items-center">
                                 <div class="blogcard__title">
-                                  <div class="blogcard__name">
+                                  <div class="blogcard__date">05.07.2022</div><div class="blogcard__name">
                                     Новинка: кальмар консервированный
                                   </div>
                                 </div><!-- /.blogcard__title -->
@@ -245,7 +245,7 @@
                                 <div class="blogcard__info flex items-center">
                                   <div class="blogcard__icon"><img src="img/playvideo.svg" alt=""></div>
                                   <div class="blogcard__title">
-                                    <div class="blogcard__name">
+                                    <div class="blogcard__date">05.07.2022</div><div class="blogcard__name">
                                       Осьминоги с запеченной свеклой и томатами черри
                                     </div>
                                     <div class="blogcard__duration">4:04</div>
@@ -272,7 +272,7 @@
                                 <div class="blogcard__info flex items-center">
                                   <div class="blogcard__icon"><img src="img/playvideo.svg" alt=""></div>
                                   <div class="blogcard__title">
-                                    <div class="blogcard__name">
+                                    <div class="blogcard__date">05.07.2022</div><div class="blogcard__name">
                                       Осьминоги с запеченной свеклой и томатами черри
                                     </div>
                                     <div class="blogcard__duration">4:04</div>
@@ -301,7 +301,7 @@
                                 <div class="blogcard__info flex items-center">
                                   <div class="blogcard__icon"><img src="img/playvideo.svg" alt=""></div>
                                   <div class="blogcard__title">
-                                    <div class="blogcard__name">
+                                    <div class="blogcard__date">05.07.2022</div><div class="blogcard__name">
                                       Осьминоги с запеченной свеклой и томатами черри
                                     </div>
                                     <div class="blogcard__duration">4:04</div>
