--- a/src/scss/detail.scss
+++ b/src/scss/detail.scss
@@ -475,75 +475,31 @@ color: #3A3A3A;
 .sitetabs__content.active {
   display: block; }
 
-.sitetabs__header {
-  margin-bottom: 55px; }
-
-.sitetabs__header ul {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center; }
-
-.sitetabs__header li {
-  list-style: none;
-  display: inline-block;
-  background: #F3F5F8;
-  border-radius: 6px;
-  
+.description h3 {
   font-style: normal;
   font-weight: 600;
   font-size: 20px;
-  line-height: 45px;
-  position: relative;
-  color: #25344F;
-  cursor: pointer;
-  height: 45px;
-  padding: 0 36px;
-  margin-right: 8px; }
-
-.sitetabs__header li.active {
-  background: rgba(4, 163, 233, 0.15);
-  color: #04A3E9; }
-
-.sitetabs__header li span.sitetabs__title {
-  position: relative;
-  padding-right: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  height: 100%; }
-
-.sitetabs__header li span.count {
-  font-size: 11px;
-  position: absolute;
-  right: 0;
-  top: 10px;
-  min-width: 16px; }
-
-.description h3 {
-  
-  font-style: normal;
-  font-weight: 600;
-  font-size: 22px;
-  line-height: 26px;
-  /* identical to box height */
-  color: #25344F;
-  margin-bottom: 12px; }
+  line-height: 24px;
+  margin: 31px 0 15px 0;
+  color: #3A3A3A;
+  }
 
 .description p {
   font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 140%;
-  color: #25344F; }
+font-weight: 400;
+font-size: 16px;
+line-height: 19px;
+margin-bottom: 15px;
+color: #3A3A3A;
+ }
+ .description ul {
+  padding-left: 20px;
+  margin-top: 5px;
+ }
+
+ .description div p {
+  margin-bottom: 5px;
+ }
 
 .description__cols {
   display: -webkit-box;
@@ -919,4 +875,46 @@ text-decoration-line: underline;
 color: #08105B;
 
   }
+}
+
+.description__table {
+  td {
+    font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 19px;
+padding-bottom: 16px;
+
+color: #3A3A3A;
+  }
+
+  td:first-child {
+    font-weight: 600;
+    padding-right: 36px;
+  }
+}
+
+.sitetabs__content {
+  .reviewsblock__review {
+    height: 100%;
+    border-radius: 15px;
+  }
+
+  .blogcard_type2 .blogcard__img {
+    padding-top: 62.57%;
+  }
+  .blogslider__item {
+    margin-bottom: 20px;
+  }
+}
+
+.blogcard__date {
+  font-style: normal;
+font-weight: 500;
+font-size: 14px;
+line-height: 17px;
+/* identical to box height */
+margin-bottom: 13px;
+
+color: #FFFFFF;
 }
