--- a/src/html/views/blog.html
+++ b/src/html/views/blog.html
@@ -66,7 +66,7 @@
                       <div class="videoslider__video">
                         <div class="blogcard">
                           <div class="blogcard__item">
-                            <div class="blogcard__mask">
+                            <a href="#" class="blogcard__mask">
                             </div>
                             <div class="blogcard__content">
                               <a class="youtubepopup" href="#!"
@@ -95,7 +95,7 @@
                       <div class="videoslider__video">
                         <div class="blogcard">
                           <div class="blogcard__item">
-                            <div class="blogcard__mask">
+                            <a href="#" class="blogcard__mask">
                             </div>
                             <div class="blogcard__content">
                               <a class="youtubepopup" href="#!"
@@ -122,7 +122,7 @@
                       <div class="videoslider__video">
                         <div class="blogcard">
                           <div class="blogcard__item">
-                            <div class="blogcard__mask">
+                            <a href="#" class="blogcard__mask">
                             </div>
                             <div class="blogcard__content">
                               <a class="youtubepopup" href="#!"
@@ -233,7 +233,7 @@
                       <div class="videoslider__video">
                         <div class="blogcard">
                           <div class="blogcard__item">
-                            <div class="blogcard__mask">
+                            <a href="#" class="blogcard__mask">
                             </div>
                             <div class="blogcard__content">
                               <a class="youtubepopup" href="#!"
@@ -260,7 +260,7 @@
                       <div class="videoslider__video">
                         <div class="blogcard">
                           <div class="blogcard__item">
-                            <div class="blogcard__mask">
+                            <a href="#" class="blogcard__mask">
                             </div>
                             <div class="blogcard__content">
                               <a class="youtubepopup" href="#!"
@@ -289,7 +289,7 @@
                       <div class="videoslider__video">
                         <div class="blogcard">
                           <div class="blogcard__item">
-                            <div class="blogcard__mask">
+                            <a href="#" class="blogcard__mask">
                             </div>
                             <div class="blogcard__content">
                               <a class="youtubepopup" href="#!"
