--- a/src/html/views/product_otzyv.html
+++ b/src/html/views/product_otzyv.html
@@ -36,7 +36,18 @@
                     <div class="swiper-slide">
                       <div class="zoom-box"><img src="img/bd8b8d6669b7b1308b939a32f2af4f27.png" /></div>
                     </div>
-                   
+                    <div class="swiper-slide">
+                      <div class="zoom-box"><img src="img/product2.jpg" /></div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div class="zoom-box"><img src="img/product3.jpg" /></div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div class="zoom-box"><img src="img/bd8b8d6669b7b1308b939a32f2af4f27.png" /></div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div class="zoom-box"><img src="img/bd8b8d6669b7b1308b939a32f2af4f27.png" /></div>
+                    </div>
                     <div class="swiper-slide">
                       <div class="zoom-box"><img src="img/bd8b8d6669b7b1308b939a32f2af4f27.png" /></div>
                     </div>
@@ -51,14 +62,24 @@
                     <div class="swiper-slide">
                       <img src="img/bd8b8d6669b7b1308b939a32f2af4f27.png" />
                     </div>
-                   
+                    <div class="swiper-slide">
+                      <img src="img/product2.jpg" />
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="img/product3.jpg" />
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="img/bd8b8d6669b7b1308b939a32f2af4f27.png" />
+                    </div>
                     <div class="swiper-slide">
                       <img src="img/bd8b8d6669b7b1308b939a32f2af4f27.png" />
                     </div>
                     <div class="swiper-slide">
                       <img src="img/bd8b8d6669b7b1308b939a32f2af4f27.png" />
                     </div>
-                   
+                    <div class="swiper-slide">
+                      <img src="img/bd8b8d6669b7b1308b939a32f2af4f27.png" />
+                    </div>
                   </div>
                 </div>
               </div>
@@ -270,9 +291,9 @@
               <div class="pagelinktab" data-tabsbutton='detailtabs'>
                 <div class="container">
                   <ul>
-                    <li><span class="active">Характеристики</span></li>
-                    <li><span>Описание</span></li>
-                    <li><span>Отзывы</span></li>
+                    <li><span >Характеристики</span></li>
+                    <li><span >Описание</span></li>
+                    <li><span class="active">Отзывы</span></li>
                     <li><span>Рецепты</a></li>
                   </ul>
                 </div><!-- /.container -->
@@ -281,7 +302,7 @@
              
             </div>
             <div class="sitetabs__wrapper">
-              <div class="sitetabs__content active" data-tabscontent='detailtabs'>
+              <div class="sitetabs__content " data-tabscontent='detailtabs'>
                 <div class="sitetabs__main">
                   <div class="description">
                     <div class="description__table">
@@ -310,27 +331,15 @@
                   <!-- /.description -->
                 </div>
               </div>
-              <div class="sitetabs__content" data-tabscontent='detailtabs'>
+              <div class="sitetabs__content " data-tabscontent='detailtabs'>
                 <div class="sitetabs__main">
                   <div class="description">
-                    <p>Корюшка – это один из распространенных представителей семейства лососевых. Отличается от своих ближайших родственников довольно большим ртом и выдающейся нижней челюстью. Преимущественно вылавливается в северных широтах. Корюшка является полезной рыбой с большим содержанием протеинов. Если вас интересует цена на корюшку за 1 кг, то она представлена на сайте нашего магазина.</p>
-                    <p>Рыбу замораживать принято сразу же после вылова, чтобы обеспечить сохранение всех качеств, которыми ценна корюшка. Процент ледяной глазури – не больше 5. Если вас заинтересовало это предложение, то у нас можно купить корюшки замороженные, тушки рыбы неразделанные, доставка по территории Москвы оперативно на дом.</p>
-                    <h3>СПОСОБЫ ГОТОВКИ КОРЮШКИ</h3>
-                    <p>Замороженное корюшки мясо нужно правильно разморозить, после чего можно приступать к готовке. Мясо довольно жирное, его принято обжаривать, предварительно запанировав в муке. Также ее можно засолить или прокоптить. Выбирайте удобный вариант готовки, опираясь на свои потребности.</p>
-                    <div>
-                      <p>Свежемороженое филе рыбы включает: </p>
-                      <ul>
-                        <li>протеины;</li>
-                        <li>ценные жиры;</li>
-                        <li>микроэлементы.</li>
-                      </ul>
-                    </div>
-                   
-                    <p>Корюшка - это полезный продукт.</p>
+                    <p>Треска — рыба, которая пользуется огромной популярностью: она очень вкусна, питательна и полезна. Хозяйки ценят ее за удобство приготовления и отсутствие мелких костей, спортсмены — за большое количество легкоусвояемого белка, а худеющие — за низкую калорийность. Стейки — один из наиболее удобных форматов для приготовления рыбы: просто разморозьте их сначала в холодильнике, а затем при комнатной температуре и отправляйте на сковороду или в духовку! Нежное белое мясо трески будет прекрасно сочетаться с овощами, рисом или легким салатом. При готовке очень важно не пересушить рыбу, поэтому лучшим вариантом станет запекание в фольге или тушение под крышкой.</p>
+                 
                   </div><!-- /.description -->
                 </div>
               </div>
-              <div class="sitetabs__content" data-tabscontent='detailtabs'>
+              <div class="sitetabs__content active" data-tabscontent='detailtabs'>
                 <div class="sitetabs__main">
                   <div class="reviewsblock">
                     <div class="reviewsblock__items">
