--- a/src/html/views/product_type2.html
+++ b/src/html/views/product_type2.html
@@ -7,7 +7,8 @@
           <li><a href="/"><span>Главная страница</span></a></li>
           <li><a href="/"><span>Каталог</span></a></li>
           <li><a href="/"><span>Свежемороженая продукция</span></a></li>
-          <li><span>Стейки трески</span></li>
+          <li><span>Харчо из осетра 
+с грецкими орехами</span></li>
         </ul>
       </div>
       <!-- /.breadcrumbs__items -->
@@ -21,7 +22,8 @@
       <div class="container">
         <div class="productpage__main flex content-between">
           <div class="detailinfo__title onlyMobile">
-            <div class="detailinfo__h1">Стейки трески</div>
+            <div class="detailinfo__h1">Харчо из осетра 
+с&nbsp;грецкими орехами</div>
             
           </div>
           <div class="productpage__left">
@@ -34,7 +36,7 @@
                 <div class="swiper detailswiper">
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                      <div class="zoom-box"><img src="img/bd8b8d6669b7b1308b939a32f2af4f27.png" /></div>
+                      <div class="zoom-box"><img src="img/f23ada762afa83eb909b32ed7d2fd36e.png" /></div>
                     </div>
                    
                     <div class="swiper-slide">
@@ -49,7 +51,7 @@
                   <div class="swiper-scrollbar"></div>
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                      <img src="img/bd8b8d6669b7b1308b939a32f2af4f27.png" />
+                      <img src="img/f23ada762afa83eb909b32ed7d2fd36e.png" />
                     </div>
                    
                     <div class="swiper-slide">
@@ -69,9 +71,10 @@
           <!-- /.productpage__left -->
           <div class="productpage__right">
             <div class="productpage__info detailinfo">
-              <div class="productpage__code">Артикул: 39</div><!-- /.productpage__code -->
+              <div class="productpage__code">Артикул: 444439</div><!-- /.productpage__code -->
               <div class="detailinfo__title onlyDesktop">
-                <h1>Стейки трески</h1>
+                <h1>Харчо из осетра 
+                  с&nbsp;грецкими орехами</h1>
               </div>
               <!-- /.detailinfo__title -->
              
@@ -81,9 +84,8 @@
                   <div class="productcard__prices">                    
                     <div class="productcard__mainprice">
                       <div class="productcard__price">
-                        <div class="productcard__pricevalue">179 ₽ / уп</div>
+                        <div class="productcard__pricevalue">399 ₽ / шт</div>
                       </div>
-                      <div class="productcard__pricecaption">349 ₽ за 1 кг</div>
                     </div>
                     <div class="detailinfo__stock">
                       <div class="detailstock">
@@ -107,16 +109,12 @@
                   <div class="detailinfo__param">
                     <div class="detailparam">
                       <div class="detailparam__content">
-                        <span class="detailparam__text">Состав: <b>треска</b> </span>
+                        <span class="detailparam__text ">
+
+                          Состав: <b>Состав: осетр (70г),рис,грецкие орехи,ткемали <br>
+                          (чеснок,кинза,соль,мята,сахар,вода,укроп,сливы,красный перец),хмели-сунели,лук репчатый,чеснок,масло растительное,петрушка,укроп,лавровый лист,черный перец,соль,вода)</b> </span>
                         
-                        <span class="info">
-                          <img src="img/info.svg" alt="">
-                          <span class="help-tooltip">
-                            <span class="help-tooltip__content">
-                                <span class="help-tooltip__text">Точная стоимость зависит от веса и будет известна при сборке заказа
-                                </span>
-                           </span>
-                        </span>
+                        
                        
                       </span>
                       </div><!-- /.detailparam__content -->
@@ -289,7 +287,7 @@
                         <tbody>
                           <tr>
                             <td>Пищевая ценность на 100 г:</td>
-                            <td>белки - 16 г, жиры - 1 г, углеводы - 0 г</td>
+                            <td>осетр (70г),рис,грецкие орехи,ткемали (чеснок,кинза,соль,мята,сахар,вода,укроп,сливы,красный перец),хмели-сунели,лук репчатый,чеснок,масло растительное,петрушка,укроп,лавровый лист,черный перец,соль,вода</td>
                           </tr>
                           <tr>
                             <td>Энергетическая ценность на 100 г:</td>
