--- a/src/scss/detail.scss
+++ b/src/scss/detail.scss
@@ -129,7 +129,7 @@ width: 100% }
   /* identical to box height */
   margin-bottom: 14px;
   margin-top: 0;
-  
+  max-width: 400px;
   color: #3A3A3A; }
 
 .detailinfo__header {
@@ -884,16 +884,23 @@ font-weight: 400;
 font-size: 16px;
 line-height: 19px;
 padding-bottom: 16px;
-
+vertical-align: top;
 color: #3A3A3A;
+  }
+
+  td:last-child {
+    max-width: 759px;
   }
 
   td:first-child {
     font-weight: 600;
     padding-right: 36px;
+    white-space: nowrap;
   }
 }
-
+.blogcard__mask {
+  display: block;
+}
 .sitetabs__content {
   .reviewsblock__review {
     height: 100%;
@@ -901,10 +908,13 @@ color: #3A3A3A;
   }
 
   .blogcard_type2 .blogcard__img {
-    padding-top: 62.57%;
+    padding-top: 61%;
   }
   .blogslider__item {
     margin-bottom: 20px;
+  }
+  .blogcard {
+    padding: 0;
   }
 }
 
@@ -917,4 +927,53 @@ line-height: 17px;
 margin-bottom: 13px;
 
 color: #FFFFFF;
+}
+.buyblock__buttons.flex.items-center {
+  margin-right: 20px;
+}
+.detailbuy__text {
+  font-style: normal;
+font-weight: 600;
+font-size: 20px;
+line-height: 24px;
+max-width: 188px;
+min-width: 188px;
+color: #3A3A3A;
+margin-right: 27px;
+width: 100%;
+}
+
+.detailbuy_out {
+  max-width: 100%;
+
+  .productcard__addtocart {
+    min-width: unset;
+    width: 100%;
+    white-space: nowrap;
+  }
+}
+
+.productcard__pricevalue {
+  white-space: nowrap;
+}
+
+.detailparam__text_large {
+  height: 18px;
+  overflow: hidden;
+  display: block;
+}
+.detailparam__text_large.active {
+  height: initial;
+}
+
+.detailparam__text_large {
+  position: relative;
+
+  &:after {
+    content: url(../img/toggler.svg);
+    position: absolute;
+    right: 0;
+    top: 0;
+    cursor: pointer;
+  }
 }
